@@ -2,22 +2,15 @@ package com.example.shopapp.configuration;
 
 import static org.springframework.http.HttpMethod.*;
 
-import java.util.List;
-
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.actuate.autoconfigure.security.servlet.EndpointRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.annotation.web.configurers.CorsConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.DispatcherServlet;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 
 import com.example.shopapp.filters.JwtTokenFilter;
@@ -25,9 +18,9 @@ import com.example.shopapp.filters.JwtTokenFilter;
 import lombok.RequiredArgsConstructor;
 
 @Configuration
+// @EnableMethodSecurity
 @EnableWebSecurity
 @EnableWebMvc
-@EnableMethodSecurity
 @RequiredArgsConstructor
 public class WebSecurityConfig {
 
@@ -37,8 +30,7 @@ public class WebSecurityConfig {
     private String apiPrefix;
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, DispatcherServlet dispatcherServlet)
-            throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
                 .addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class)
                 .authorizeHttpRequests(requests -> {
@@ -61,19 +53,24 @@ public class WebSecurityConfig {
                             .anyRequest()
                             .authenticated();
                 });
-        http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
-            @Override
-            public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("http://localhost:4200"));
-                configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-                configuration.setAllowedHeaders(List.of("Authentication", "Content-Type", "x-auth-token"));
-                configuration.setExposedHeaders(List.of("x-auth-token"));
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
-                httpSecurityCorsConfigurer.configurationSource(source);
-            }
-        });
+        http.securityMatcher(String.valueOf(EndpointRequest.toAnyEndpoint()));
+
+        //        http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
+        //            @Override
+        //            public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
+        //                CorsConfiguration configuration = new CorsConfiguration();
+        //                configuration.setAllowedOrigins(List.of("*"));
+        //                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE",
+        // "OPTIONS"));
+        //                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type",
+        // "x-auth-token"));
+        //                configuration.setExposedHeaders(List.of("x-auth-token"));
+        //                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        //                source.registerCorsConfiguration("/**", configuration);
+        //                httpSecurityCorsConfigurer.configurationSource(source);
+        //            }
+        //        });
+
         return http.build();
     }
 }
